--- a/select.html
+++ b/select.html
@@ -22,8 +22,8 @@
 <body>
     <select name="cars" id="cars">
         <option value="volvo">Volvo</option>
-        <option value="saab" name = "test">Saab</option>
-        <option value="mercedes">Mercedes</option>
+        <option value="saab" >Saab</option>
+        <option value="mercedes" name = "mercedes" >Mercedes</option>
         <option value="audi">Audi</option>
     </select>
 </body>
