--- a/select.html
+++ b/select.html
@@ -20,11 +20,13 @@
        
 </style>
 <body>
-    <select name="cars" id="cars">
+    <select name="cars" id="cars" multiple>
         <option value="volvo">Volvo</option>
-        <option value="saab" >Saab</option>
-        <option value="mercedes" name = "mercedes" >Mercedes</option>
+        <option value="saab">Saab</option>
+        <option value="mercedes"  name = "mercedes">Mercedes</option>
         <option value="audi">Audi</option>
+        <option value="opel">Opel</option>
     </select>
 </body>
 </html>
+<option value="foo">Bar</option>
