--- a/select.html
+++ b/select.html
@@ -21,6 +21,7 @@
 </style>
 <body>
     <select name="cars" id="cars" multiple>
+        <option value="default"selected> chose your car </option>
         <option value="volvo">Volvo</option>
         <option value="saab">Saab</option>
         <option value="mercedes"  name = "mercedes">Mercedes</option>
