--- a/select.html
+++ b/select.html
@@ -21,11 +21,11 @@
 </style>
 <body>
     <select name="cars" id="cars" multiple>
-        <option value="volvo">Volvo</option>
-        <option value="saab">Saab</option>
+        <option value="volvo" name = "volvo">Volvo</option>
+        <option value="saab"saab name = "saab">Saab</option>
         <option value="mercedes"  name = "mercedes">Mercedes</option>
-        <option value="audi">Audi</option>
-        <option value="opel">Opel</option>
-    </select>
+        <option value="audi" name = "audi">Audi</option>
+        <option value="opel" name = "opel">Opel</option>
+    </selectname = "mercedes"
 </body>
 </html>
