--- a/select.html
+++ b/select.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <style> 
+    body {
+        text-align: center;
+    }
     label {
         font-family: sans-serif;
         font-size: 1rem;
@@ -20,12 +23,17 @@
        
 </style>
 <body>
+    <a id = "click" href="#" onclick="return confirm('Are you sure you want to go to that link?');">click me!</a>
+    <br>
+    <br>
+    <p id ="text"> select with multiple choice </Select></p>
     <select name="cars" id="cars" multiple>
-        <option value="volvo" name = "volvo">Volvo</option>
-        <option value="saab"saab name = "saab">Saab</option>
+        <option value="default" name = "default"> chose your car </option>
+        <option value="volvo"name = "volvo">Volvo</option>
+        <option value="saab"name = "saab">Saab</option>
         <option value="mercedes"  name = "mercedes">Mercedes</option>
         <option value="audi" name = "audi">Audi</option>
         <option value="opel" name = "opel">Opel</option>
-    </selectname = "mercedes"
+    </select>
 </body>
 </html>
